# data_modeling_with_cassandra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: config.yaml
notebooks/: notebook.ipynb  notebook_1.ipynb
scripts/: run_pipeline.py
src/: __init__.py
src/db/: connection.py  schema.py
src/etl/: __init__.py  extract.py  load.py  pipeline.py  transform.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_extract.py  test_load.py  test_transform.py
